# jetbrain-installs

./: .gitattributes  .gitignore  Pipfile  README.md  example.json  install.sh  jetbrains-install.py  ji.py  makefile  nuitka.sh  pyinstaller.sh  pyproject.toml  requirements.txt  van.py
