[tool.poetry]
name = "jetbrain-installs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
requests = "^2.26.0"
tqdm = "^4.62.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
